# DevinAutomation

./: .gitignore  Dockerfile  LAUNCHDARKLY_INTEGRATION.md  PHASE1_FINDINGS.md  PHASE2_DESIGN.md  README.md  demo_launchdarkly.py  docker-compose.yml  init.py  package-lock.json  package.json  requirements.txt  test_devin_api_client.py
.github/workflows/: ci.yml
__tests__/: scanner.test.ts
__tests__/api/: flags.test.ts
app/api/audit/: route.ts
app/api/flags/: route.ts
app/api/pr/create/: route.ts
app/api/scan/: route.ts
app/audit/: page.tsx
app/sessions/: page.tsx
lib/github/: client.ts
lib/providers/: launchdarkly.ts  types.ts
lib/scanner/: index.ts  patterns.ts  types.ts
orchestrator-dashboard/: package.json  playwright.config.js
orchestrator-dashboard/backend/: app.py  launchdarkly_client.py  orchestrator.db  pyproject.toml  test_api.py  test_orchestrator.py  test_response_shapes.py
orchestrator-dashboard/backend/app/: database.py  models.py  services.py
orchestrator-dashboard/backend/app_old/: main.py
orchestrator-dashboard/frontend/: app.js  index.html  package-lock.json  package.json  playwright.config.ts  test_frontend.spec.js
orchestrator-dashboard/frontend-vanilla/: app.js  index.html
orchestrator-dashboard/frontend/e2e/: create-request.spec.ts  dashboard.spec.ts  request-detail.spec.ts
orchestrator-dashboard/frontend/src/: App.tsx  api.ts  types.ts
prisma/: dev.db  schema.prisma
src/: devin_api_client.py  launchdarkly_client.py
tests/: test_devin_api_client.py  test_frontend.spec.js  test_orchestrator.py
(+6 files in other folders)
