[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.121.0"}
psycopg = {extras = ["binary"], version = "^3.2.12"}
sqlalchemy = "^2.0.44"
sse-starlette = "^3.0.3"
python-dotenv = "^1.2.1"
slowapi = "^0.1.9"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
